--- a/Style.css
+++ b/Style.css
@@ -3,14 +3,28 @@
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background: #eaeaea;
-
+    
+    
+    padding:26px;
+    max-width: 900px;
+    width: max-content;
+    justify-content: center;
 
     
-    padding: 56px;
-    width: 100%;
+
 
 }
-
+#container {
+    
+    background: #ffff;
+    text-align:justify;
+    
+    
+    width: 980px;
+    padding: 16px;
+    border-radius: 14px;
+   
+}
 figure, img {
     border-radius: 10px;
     text-align: center;
@@ -19,17 +33,21 @@ figure, img {
 h1 {
     font-size: 28px;
     text-align: center;
+    
 }
 
 h2, h3, h4, h5, h6 {
     font-size: 20px;
     text-align: center;
     margin: 26px 0 26px auto;
+    color: #1b1b1b;
+
 }
 
 
 ul li p {
     font-size: 16px;
+    color: #39393a;
 }
 
 
@@ -37,4 +55,6 @@ ul li p {
 
 footer {
     font-size: 12px;
+    text-align: center;
+    color: #8f8f8f;
 }
