--- a/Style.css
+++ b/Style.css
@@ -1,42 +1,53 @@
-
-
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Roboto', sans-serif;
     background: #eaeaea;
-    
-    
-    padding:26px;
+
+
+    padding: 26px;
+    width: 100%;
     max-width: 900px;
-    width: max-content;
+    margin: 26px auto;
     justify-content: center;
 
-    
 
 
 }
+
 #container {
-    
+
     background: #ffff;
-    text-align:justify;
-    
-    
+    text-align: justify;
+
+
     width: 980px;
     padding: 16px;
     border-radius: 14px;
-   
+
 }
-figure, img {
+
+figure,
+img {
     border-radius: 10px;
-    text-align: center;
+    text-align: right;
+    width: 100%;
+    max-width: fit-content
+}
+
+img {
+    transform: ;
 }
 
 h1 {
-    font-size: 28px;
+    font-size: 38px;
     text-align: center;
-    
+
 }
 
-h2, h3, h4, h5, h6 {
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-size: 20px;
     text-align: center;
     margin: 26px 0 26px auto;
@@ -45,10 +56,17 @@ h2, h3, h4, h5, h6 {
 }
 
 
-ul li p {
+ul li  {
     font-size: 16px;
     color: #39393a;
+    margin: 16px 0 16px;
+    
 }
+
+ol li {
+    margin: 16px 0 16px;
+}
+
 
 
 
